--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,11 @@
 {
   "short_name": "To-Do List",
   "name": "To-Do List with React",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
+  "icons": [{
+    "src": "icon.png",
+    "type": "image/png",
+    "sizes": "192x192"
+  }],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
